# projmap

./: .gitignore  CHANGELOG.md  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
src/projmap/: __init__.py  cli.py  core.py  server.py
tests/: test_basic.py
